--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>sa-struts-portlet</artifactId>
   <packaging>jar</packaging>
   <name>sa-struts-portlet</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0-rc1</version>
   <description/>
   <url>http://sastruts.seasar.org/</url>
   <inceptionYear>2004-2008</inceptionYear>
@@ -122,7 +122,7 @@
     <dependency>
       <groupId>org.seasar.sastruts</groupId>
       <artifactId>sa-struts</artifactId>
-      <version>1.0.4-rc1</version>
+      <version>1.0.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
