--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <artifactId>sa-struts-portlet</artifactId>
   <packaging>jar</packaging>
   <name>sa-struts-portlet</name>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
   <description/>
   <url>http://sastruts.seasar.org/</url>
-  <inceptionYear>2004-2008</inceptionYear>
+  <inceptionYear>2004</inceptionYear>
   <mailingLists>
     <mailingList>
       <name>Seasar-user</name>
@@ -122,13 +122,13 @@
     <dependency>
       <groupId>org.seasar.sastruts</groupId>
       <artifactId>sa-struts</artifactId>
-      <version>1.0.4-sp4</version>
+      <version>1.0.4-sp6</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.seasar.container</groupId>
       <artifactId>s2-tiger</artifactId>
-      <version>2.4.34</version>
+      <version>2.4.39</version>
       <type>jar</type>
     </dependency>
     <dependency>
