--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>sa-struts-portlet</artifactId>
   <packaging>jar</packaging>
   <name>sa-struts-portlet</name>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <description/>
   <url>http://sastruts.seasar.org/</url>
   <inceptionYear>2004</inceptionYear>
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>org.seasar.container</groupId>
       <artifactId>s2-tiger</artifactId>
-      <version>2.4.39</version>
+      <version>2.4.40</version>
       <type>jar</type>
     </dependency>
     <dependency>
